<resources>
    <!--หน้า activity_main-->
    <string name="app_name">PROSPEC VALSTREET</string>
    <string name="edit_text">กรอกข้อมูล</string>
    <string name="user_name">ชื่อผู้ใช้งาน</string>
    <string name="skun">นามสกุล</string>
    <string name="user_skun">นามสกุล</string>
    <string name="user_call">เบอร์โทร</string>
    <string name="user_email">E-mail</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="Prapet">ประเภท</string>
    <string name="Save">Login</string>
    <string name="BNext">Next</string>
    <string name="name_email">กรอก E-mail</string>
    <string name="phone">กรอกเบอร์โทร</string>
    <string name="Next">สมัครสมาชิกที่นี่</string>

    <!--หน้า ส่งข้อมแบบย่อ-->
    <string name="title">รายละเอียดสินทรัพย์แบบย่อ</string>
    <string name="title_alert">ยืนยันการกรอกรายละเอียด</string>

    <!--หน้า activity_call-->
    <string name="n_tel_02_559_0678">สำนักงานใหญ่</string>
    <string name="n_tel_05_324_0216">สาขา เชียงใหม่</string>
    <string name="n_tel_05_371_8391">สาขา เชียงราย</string>
    <string name="n_tel_05_422_2879">สาขา ลำปาง</string>
    <string name="n_tel_05_521_1243">สาขา พิษณุโลก</string>
    <string name="n_tel_03_524_3242">สาขา อยุธยา</string>
    <string name="n_tel_03_232_1934">สาขา ราชบุรี</string>
    <string name="n_tel_05_672_1980">สาขา เพชรบูรณ์</string>
    <string name="n_tel_05_571_4806">สาขา กำแพงเพชร</string>
    <string name="n_tel_03_667_0695">สาขา สระบุรี</string>
    <string name="n_tel_05_453_1220">สาขา แพร่</string>
    <string name="n_tel_07_532_2331">สาขา นครศรีธรรมราช</string>
    <string name="n_tel_03_260_2286">สาขา ประจวบคีรีขันธ์</string>

    <!--หน้า activity_signin-->
    <string name="name_customer">ชื่อ</string>
    <string name="user_skun_customer">นามสกุล</string>
    <string name="number">เลขที่โฉลด</string>
    <string name="tambon">ตำบล</string>
    <string name="Amper">อำเภอ</string>
    <string name="jangW">จังหวัด</string>
    <string name="sinc">ชื่อเจ้าหน้าที่สินเชื่อ</string>
    <string name="name_bank">ชื่อสถาบันการกู้</string>
    <string name="name_skun1">นามสกุล</string>
    <string name="name_phon1">เบอร์โทร</string>
    <string name="name_email1">E-mail</string>
    <string name="name_sangkud1">สังกัดสถาบัน</string>
    <string name="name_sangkudSaka1">สังกัดสาขา</string>
    <string name="name_samnuk1">ที่อยู่สำนักงาน</string>
    <string name="name_number1">เลขที่</string>
    <string name="tanon1">ถนน</string>
    <string name="tambon1">ตำบล</string>
    <string name="amper1">อำเภอ</string>
    <string name="jangW1">จังหวัด</string>

    <!-- หน้า activity_land_building-->
    <string name="land">ที่ดินดินเปล่า จำนวน...แปลง</string>
    <string name="number_land1">แปลงที่ 1</string>
    <string name="edit_praped">เอกสารสิทธิ์</string>
    <string name="edit_number1">เลขที่</string>
    <string name="edit_ntee">เนื้อที่ดิน</string>
    <string name="number_land2">แปลงที่ 2</string>
    <string name="number_land3">แปลงที่ 3</string>
    <string name="number_land4">แปลงที่ 4</string>
    <string name="number_land5">แปลงที่ 5</string>

    <!--หน้า Acitivity_building-->
    <string name="land_buil">สิ่งปลูกสร้างในที่ดิน จำนวน...หลัง</string>
    <string name="edit_prapedB">ประเภท</string>
    <string name="edit_stus">โครงสร้าง</string>
    <string name="edit_numF">จำนวนชั้น</string>
    <string name="edit_numT">เนื้อที่(ตรม.)</string>
    <string name="edit_age">อายุ</string>

    <!--หน้าactivity_room-->
    <string name="room">ห้องชุด จำนวน...ห้อง</string>
    <string name="edit_numR">เลชที่ห้องชุด</string>
    <string name="edit_numFo">ชั้นที่</string>
    <string name="edit_nteeT">เนื้อที่รวม(ตรม.)</string>
    <string name="edit_nameH">ชื่ออาคารชุด</string>

    <!--หน้า activity_satus-->
    <string name="status">สถานะงาน</string>
    <string name="name_password">Password</string>
    <string name="user_email_login">E-mail</string>
    <string name="user_password_login">Password</string>
    <string name="hint_lookka">ลูกค้า</string>
    <string name="songngan">ผู้ส่งงาน</string>
    <string name="prospec">Prospec Appraisal</string>
    <!--หน้า navigation button-->
    <string name="title_home">หน้าเมนู</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="email">อีเมล์</string>
    <string name="line">ไลน์</string>
    <string name="call">ติดต่อ</string>
    <string name="statuss">สอบถาม</string>
    <string name="service">บริหาร</string>
    <string name="message">นัดตรวจ</string>
    <string name="home">หน้าหลัก</string>
    <string name="login">เข้าสู่ระบบ</string>

    <!--toolbar-->
    <string name="lands">ที่ดินเปล่า</string>
    <string name="massage_alert">โปรดกรอกรายละเอียดให้ครบถ้วน</string>
    <string name="title_have_space">มีช่องว่าง</string>
    <string name="massage_have_space">โปรดกรอกให้ครบทุกช่อง</string>
    <string name="title_type_doc1">ยังไม่ได้เลือกเอกสารสิทธิ์</string>
    <string name="message_type_doc1">กรุณาเลือกเอกสารสิทธิ์</string>
    <string name="title_comfirm">โปรดใส่ข้อมูล</string>
    <string name="number_land">ที่ดินจำนวน</string>
    <string name="numbers">เลขที่</string>
    <string name="area">เนื้อที่</string>
    <string name="all">รวมเนื้อที่ดิน</string>
    <string name="road">ถนน</string>
    <string name="soi">ซอย</string>
    <string name="project">โครงการ</string>
    <string name="nameniti">ชื่อนิติบุคคล</string>
    <string name="address">ที่อยู่</string>
    <string name="telephone">โทรศัพท์</string>
    <string name="edit_province">เลือกจังหวัด</string>
    <string name="aumpor">เลือกอำเภอ</string>
    <string name="SaveData">Save</string>

    <!--<string-array name="prated">-->
        <!--<item>เลือกประเภทกรรมสิทธิ์</item>-->
        <!--<item>กรรมสิทธิ์สมบูรณ์(ซื้อขายขาด)</item>-->
        <!--<item>ได้รับสิทธิการเช่ามา</item>-->
        <!--<item>ไม่ทราบ</item>-->
    <!--</string-array>-->

    <!--<string-array name="image">-->
        <!--<item>เลือกการเบราซ์</item>-->
        <!--<item>เบราซ์เพื่อส่งเอกสาร</item>-->
        <!--<item>เบราซ์เพื่อส่งภาพถ่าย</item>-->
        <!--<item>เบราซ์เพื่อส่งพิกัดแผนที่</item>-->
    <!--</string-array>-->

    <string-array name="ekasan">
        <item>เลือกเอกสารสิทธิ์</item>
        <item>โฉนดที่ดิน</item>
        <item>นส.3ก</item>
        <item>นส.3</item>
    </string-array>

</resources>
