<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efecec"
    android:orientation="vertical"
    tools:context=".CallActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>

    <!--Content เลื่อนลง-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp">

        <!--From-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/button1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_02_559_0678"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_324_0216"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_371_8391"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_422_2879"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button5"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_521_1243"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_03_524_3242"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_03_232_1934"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_672_1980"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button9"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_571_4806"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_03_667_0695"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button11"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_05_453_1220"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button12"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_liner"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_07_532_2331"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button13"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/backgroup_call"
                android:drawableLeft="@android:drawable/ic_menu_call"
                android:text="@string/n_tel_03_260_2286"
                android:textSize="@dimen/size_main"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>